--- a/CodeRecoder/CodeRecoder.csproj
+++ b/CodeRecoder/CodeRecoder.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CodeRecoder</RootNamespace>
     <AssemblyName>CodeRecoder</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <PublishUrl>publish\</PublishUrl>
@@ -27,6 +27,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -106,18 +107,6 @@
     <Compile Include="DelItem.Designer.cs">
       <DependentUpon>DelItem.cs</DependentUpon>
     </Compile>
-    <Compile Include="Choose.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Choose.Designer.cs">
-      <DependentUpon>Choose.cs</DependentUpon>
-    </Compile>
-    <Compile Include="KnowledgeItem.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="KnowledgeItem.Designer.cs">
-      <DependentUpon>KnowledgeItem.cs</DependentUpon>
-    </Compile>
     <Compile Include="main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,12 +127,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="settings.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="settings.Designer.cs">
-      <DependentUpon>settings.cs</DependentUpon>
-    </Compile>
     <Compile Include="test.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -165,17 +148,11 @@
     <EmbeddedResource Include="AlterGroupName.resx">
       <DependentUpon>AlterGroupName.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Choose.resx">
-      <DependentUpon>Choose.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="DelItem.resx">
       <DependentUpon>DelItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FileItem.resx">
       <DependentUpon>FileItem.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="KnowledgeItem.resx">
-      <DependentUpon>KnowledgeItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="main.resx">
       <DependentUpon>main.cs</DependentUpon>
@@ -192,10 +169,8 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="settings.resx">
-      <DependentUpon>settings.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="test.resx">
       <DependentUpon>test.cs</DependentUpon>
     </EmbeddedResource>
