--- a/CodeRecoder/CodeRecoder.csproj
+++ b/CodeRecoder/CodeRecoder.csproj
@@ -95,6 +95,12 @@
       <DependentUpon>AlterGroupName.cs</DependentUpon>
     </Compile>
     <Compile Include="DataPath.cs" />
+    <Compile Include="DBCopy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DBCopy.Designer.cs">
+      <DependentUpon>DBCopy.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainBody.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +118,12 @@
     </Compile>
     <Compile Include="myFont.Designer.cs">
       <DependentUpon>myFont.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PartFont.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PartFont.Designer.cs">
+      <DependentUpon>PartFont.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -139,6 +151,9 @@
     <EmbeddedResource Include="AlterGroupName.resx">
       <DependentUpon>AlterGroupName.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="DBCopy.resx">
+      <DependentUpon>DBCopy.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FileItem.resx">
       <DependentUpon>FileItem.cs</DependentUpon>
     </EmbeddedResource>
@@ -147,6 +162,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="myFont.resx">
       <DependentUpon>myFont.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PartFont.resx">
+      <DependentUpon>PartFont.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
